# nomad-events-to-slack

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  RELEASE.md  changelog.rst  cloudbuild.yaml  env.sample  pyproject.toml  requirements.linters.txt  requirements.tests.txt  requirements.txt
.github/: dependabot.yaml
.github/workflows/: dependabot-auto-build.yaml  deploy.yaml  lint.yaml  ruff.yaml  tests.yaml
docs/: changelog.rst  enhacements.md
docs/devops/: autopub.md  docker.md  dotenv-linter.md  poetry.md  pre-commit.md  requirements uv.md  ruff.md
src/: app.py
tests/: test_app.py
